--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,27 @@ body {
     text-wrap: balance;
   }
 }
+
+@font-face {
+  font-family: 'Lovelo';
+  src: url('/fonts/Lovelo-Black.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('/fonts/OpenSans-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+h1 {
+  font-family: 'Lovelo', sans-serif;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+}
